--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {
-     "babel-core": "^6.26.3",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.3.1",
-    "webpack-stream": "^4.0.3",
-    "webpack": "^4.8.1"
+    "webpack": "^4.8.1",
+    "webpack-stream": "^4.0.3"
   },
   "scripts": {
     "build": "gulp scripts"
